--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "discord.js": "^13.0.0-dev.5e70694.1626955541",
     "dotenv": "^10.0.0",
+    "google-spreadsheet": "^3.1.15",
     "ini": "^2.0.0"
   },
   "name": "outfox-discord-bot",
