--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "google-spreadsheet": "^3.1.15",
     "ini": "^2.0.0",
     "request": "^2.88.2",
-    "request-promise": "^4.2.6"
+    "request-promise": "^4.2.6",
+    "winston": "^3.3.3"
   },
   "name": "outfox-discord-bot",
   "version": "1.0.0",
