--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^10.0.0",
     "google-spreadsheet": "^3.1.15",
     "ini": "^2.0.0",
+    "node-uri": "^1.1.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "winston": "^3.3.3"
