--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "google-spreadsheet": "^3.1.15",
     "ini": "^2.0.0",
     "node-uri": "^1.1.1",
+    "node-vibrant": "^3.2.1-alpha.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "winston": "^3.3.3"
