--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^10.0.0",
     "google-spreadsheet": "^3.1.15",
     "ini": "^2.0.0",
+    "node-cache": "^5.1.2",
     "node-uri": "^1.1.1",
     "node-vibrant": "^3.2.1-alpha.1",
     "request": "^2.88.2",
