--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "dependencies": {
-    "cheerio": "^1.0.0-rc.10",
-    "discord.js": "^13.1.0",
-    "dotenv": "^10.0.0",
-    "google-spreadsheet": "^3.1.15",
-    "ini": "^2.0.0",
-    "node-cache": "^5.1.2",
-    "node-uri": "^1.1.1",
-    "node-vibrant": "^3.2.1-alpha.1",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6",
-    "winston": "^3.3.3"
-  },
-  "name": "outfox-discord-bot",
+  "name": "slash-create-template",
   "version": "1.0.0",
+  "description": "A template for slash-create",
   "main": "src/index.js",
   "scripts": {
-    "test": "node src/index.js"
+    "sync": "slash-up sync",
+    "sync:dev": "slash-up sync -e development",
+    "start": "node src/index.js"
   },
-  "author": "Jorge Luiz Souza Xavier",
-  "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "cat-loggr": "^1.1.0",
+    "discord.js": "^13.6.0",
+    "dotenv": "^8.2.0",
+    "fastify": "^3.9.2",
+    "google-spreadsheet": "^3.2.0",
+    "slash-create": "^5.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "prettier": "^2.2.1",
+    "slash-up": "^1.0.11"
+  }
 }
