--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-cache": "^5.1.2",
     "node-uri": "^1.1.1",
     "node-vibrant": "^3.2.1-alpha.1",
+    "request-promise": "^4.2.6",
     "slash-create": "^5.2.0"
   },
   "devDependencies": {
