--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "author": "Jorge Luiz Souza Xavier",
   "license": "Apache License 2.0",
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.4.10",
     "@types/jest": "^29.2.2",
     "eslint": "^8.27.0",
     "jest": "^29.3.1",
